# rust-square-series-crate

./: Cargo.toml  README.md
src/: cube.rs  lib.rs
