[package]
name = "sqare-series-crate"
version = "0.1.0"
edition = "2021"
author = ["Mahmudul Islam <mahmudulislam299@gmail.com>"]
license = "MIT"
repository = "https://github.com/mahmudulislam299/rust-square-series-crate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
